refactor: Exluido as entidades comments e carts
