# backend/src/routes/index.ts
@@ -1,16 +1,7 @@
 import { Router } from "express";
-import {
-  addresses,
-  auth,
-  carts,
-  comments,
-  products,
-  users,
-} from "../constants/endPoints";
+import { addresses, auth, products, users } from "../constants/endPoints";
 import { addressesRoutes } from "./addresses";
 import { authRoutes } from "./authenticate";
-import { cartsRoutes } from "./carts";
-import { commentsRoutes } from "./comments";
 import { productsRoutes } from "./products";
 import { usersRoutes } from "./users";
 
@@ -18,8 +9,6 @@ const routes = Router();
 
 routes.use(addresses, addressesRoutes);
 routes.use(products, productsRoutes);
-routes.use(comments, commentsRoutes);
-routes.use(carts, cartsRoutes);
 routes.use(users, usersRoutes);
 routes.use(auth, authRoutes);
 
